extends Node2D

func play_main():
	$mainSound.play()
	
func stop_main():
	$mainSound.stop()
	
func play_cave():
	$caveSound.play()
	
func stop_cave():
	$caveSound.stop()
	
func sword_play():
	$sword.play()
	
func play_boss():
	$BossSound.play()
	
func stop_boss():
	$BossSound.stop()
	
func play_end():
	$end.play()
	
func stop_end():
	$end.stop()
	

	

